# simulador-evm-mc

./: .gitignore  Makefile  README.md  backlog.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: 1_Definicion_Proyecto.py  2_Simulacion_MonteCarlo.py  3_EVM_y_Pronosticos.py  Home.py  __init__.py  main.py
app/components/: charts.py  widgets.py
app/core/: cpm.py  evm.py  models.py  montecarlo.py
app/pages/: 1_Definicion_Proyecto.py  2_Simulacion_MonteCarlo.py  3_EVM.py  4_Dashboard_Resultados.py  5_Acerca_y_Documentacion.py  Dashboard.py  EVM.py  Project.py  SimulationMC.py
app/services/: io_service.py  state_service.py
app/ui/: charts.py  widgets.py
app/utils/: helpers.py  state.py  validators.py
core/: config.py  cpm.py  datamodel.py  distributions.py  evm.py  io.py  montecarlo.py  reporting.py  validators.py
data/: sample_progress.csv  sample_project.csv  sample_project1.csv  state.json
data/examples/: avance_ejemplo.csv  wbs_ejemplo.csv
docs/: Especificacion_Datos.md  Informe_Tecnico.md  Metodologia.md  README_Usuario.md  report_template.md  video_outline.md
notebooks/: README.md
scripts/: benchmark_montecarlo.py  make_example_data.py
tests/: test_cpm.py  test_distributions.py  test_evm.py  test_montecarlo.py
